syntax = "proto3";

option csharp_namespace = "Network.Grpc.Services";


message NodeAliveRequest {

}
message NodeAliveResponse {
	string message = 1;
	bool status = 2;
}