syntax = "proto3";
import "Protos/Models.proto";
import "google/protobuf/Empty.proto";

option csharp_namespace = "Network.Grpc.Services";

package network;

service Node {

  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc NodeAlive (google.protobuf.Empty) returns (NodeAliveResponse);
}



message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

